# katok

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.omo/: ulw-live-minsync-notepad.md
.omo/evidence/: task-10-doctor.json  task-10-wipe-index.txt  task-4-idempotent-sync-first.json  task-4-idempotent-sync-second.json  task-6-index-dry-run.json  task-6-index-mock.json  task-7-bm25.json  task-7-keyword.json  task-8-semantic-mock.json  task-9-chunk-get.json  task-cli-qa.txt
.omo/evidence/live-minsync/: C001-live-happy.txt  C002-live-edge.txt  C003-regression.txt  red-green.txt
.omo/plans/: hydrogen-peroxide-hype.md
.omo/ulw-loop/: codex-goal-snapshot.json  quality-gate.json
.omo/ulw-loop/019e97f8-a94f-7ea3-9f92-60e53f4f6ff6/: brief.md  goals.json  ledger.jsonl
.omo/ulw-loop/evidence/: C001-final-happy.txt  C002-final-edge.txt  C003-final-regression.txt
Formula/: katok.rb
crates/hype-adapters/: Cargo.toml
crates/hype-adapters/src/: lib.rs
crates/hype-cli/: Cargo.toml
crates/hype-cli/src/: cli.rs  commands.rs  main.rs  support.rs
crates/hype-cli/src/commands/: source_adapter.rs
crates/hype-cli/tests/: cli_behaviors.rs  config_wiring.rs  gap_behaviors.rs  kakaocli_adapter.rs  live_semantic.rs
crates/hype-core/: Cargo.toml
crates/hype-core/src/: archive.rs  config.rs  fixture.rs  lib.rs  paths.rs  semantic.rs  types.rs
crates/hype-core/src/archive/: model.rs
crates/hype-core/src/semantic/: endpoint.rs  live.rs
crates/hype-core/tests/: planned_behaviors.rs
crates/katok-adapters/: Cargo.toml
crates/katok-adapters/src/: lib.rs
crates/katok-cli/: Cargo.toml
crates/katok-cli/src/: cli.rs  commands.rs  main.rs
crates/katok-cli/src/commands/: chunk_commands.rs  source_adapter.rs
crates/katok-cli/tests/: cli_behaviors.rs  config_wiring.rs  gap_behaviors.rs  hierarchical_behaviors.rs  live_semantic.rs
crates/katok-core/: Cargo.toml
crates/katok-core/src/: chunking.rs  config.rs  lib.rs  search.rs  semantic.rs
crates/katok-core/src/archive/: parent.rs  read.rs  schema.rs  write.rs
crates/katok-core/src/chunking/: parent.rs
crates/katok-core/src/semantic/: embedder.rs  endpoint.rs  live.rs  mock.rs  store.rs
crates/katok-core/tests/: planned_behaviors.rs
crates/katok-kakao/: Cargo.toml
crates/katok-kakao/src/: auth.rs  lib.rs  reader.rs
crates/katok-kakao/tests/: reader_synthetic_db.rs
docs/: macos-first-run.md
scripts/: katok-macos-setup.sh  verify_release_config.py
skills/hype/: SKILL.md
skills/katok/: SKILL.md
src/: adapters.rs  archive.rs  chunking.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  paths.rs  support.rs  types.rs
src/archive/: model.rs  schema.rs  write.rs
src/commands/: chunk_commands.rs  freshness.rs  index_commands.rs  media_commands.rs  permissions.rs  source_adapter.rs
src/kakao/: auth.rs  bplist.rs  derive.rs  media_crypto.rs  media_paths.rs  media_reader.rs  media_resolver.rs  mod.rs  reader.rs
src/semantic/: mock.rs
tests/: cli_behaviors.rs  config_wiring.rs  freshness_behaviors.rs  gap_behaviors.rs  hierarchical_behaviors.rs  kakaocli_adapter.rs  live_semantic.rs  media_synthetic_db.rs  planned_behaviors.rs  reader_synthetic_db.rs
tests/fixtures/kakao/: group_gap.jsonl  malformed.jsonl  replies.jsonl
