[package]
name = "katok"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "MIT"
description = "Local-first KakaoTalk memory archive and search CLI for macOS"
readme = "README.md"
repository = "https://github.com/NomaDamas/katok"
keywords = ["kakao", "kakaotalk", "search", "cli"]
categories = ["command-line-utilities"]
exclude = [
    ".fastembed_cache/**",
    ".gjc/**",
    ".omo/**",
    "crates/**",
    "target/**",
]

[[bin]]
name = "katok"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
fastembed = { version = "5.16.1", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
