[package]
name = "hype-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hype"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hype-core = { path = "../hype-core" }
hype-adapters = { path = "../hype-adapters" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
