[package]
name = "katok-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
katok-core = { path = "../katok-core" }
katok-kakao = { path = "../katok-kakao" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
