[package]
name = "katok-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "katok"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
katok-core = { path = "../katok-core" }
katok-adapters = { path = "../katok-adapters" }
katok-kakao = { path = "../katok-kakao" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
