[package]
name = "katok-kakao"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono.workspace = true
dirs.workspace = true
hmac = "0.12"
katok-core = { path = "../katok-core" }
pbkdf2 = { version = "0.12", default-features = false }
rayon = "1"
rusqlite.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha1 = "0.10"
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
